# dolmentools

./: .gitignore  .pnp.cjs  Cargo.toml  Dockerfile  README.md  fly.toml  gleam.toml  manifest.toml  package-lock.json  package.json  pnpm-lock.yaml
api/: README.md  gleam.toml
api/src/: models.gleam  service.gleam
backend/: .gitignore  Cargo.toml
backend/src/: feats.rs  lib.rs  main.rs  players.rs  session.rs  xp.rs
frontend/dolmentools-solid/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/dolmentools-solid/src/: index.tsx
priv/migrations/: 001_create-sessions.up.sql  002_create-characters.up.sql  003_create-session_characters.up.sql  004_create-session_feats.up.sql  005_create-character_reports.up.sql  005_create-session_reports.up.sql  006_create-character_reports.up.sql  007_rework-session-characters-table.up.sql
src/: dolmentools.gleam  main.rs
src/dolmentools/: api.gleam  db.gleam  models.gleam  pages.gleam  router.gleam  service.gleam  web.gleam
src/dolmentools/components/: button.gleam  character_card.gleam  character_report_card.gleam  feat_form.gleam  input.gleam  report_card.gleam  session_actions.gleam  session_card.gleam  session_view.gleam  shortcut_view.gleam
src/dolmentools/db/: characters.gleam  (+2 more)
templates/: hello.html
test/: service_test.gleam
test/db/: character_test.gleam  session_test.gleam
web/: gleam.toml  manifest.toml
web/src/: character.gleam  db.gleam  dolmen.gleam  session.gleam  web.gleam
web/test/: character_test.gleam  dolmen_test.gleam  service_test.gleam  session_test.gleam
(+23 files in other folders)
