[package]
name = "dolmentools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = { version = "0.7.4", features = ["http2"] }
notify = "6.1.1"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
